--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@
 }
 .dogBlock{
     padding: 20px;
-    width: 450px;
-    height: 500px;
+    width: 100%;
+    height: 700px;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -19,7 +19,7 @@
 
 .img-fluid{
     width: 100%;
-    height: 300px;
+    height: 600px;
     box-shadow: 10px 10px 15px rgb(89, 97, 100);
 }
 
